# Eng-Bot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  __main__.py  bot-entrypoint.sh  bot.Dockerfile  dev.Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  pyproject.toml
.github/workflows/: deploy.yml  testing.yml
engbot/: __main__.py  config.py
engbot/database/: __init__.py  base.py
engbot/database/main_database/: db.py
engbot/database/main_database/repositories/: base.py  users.py  words.py
engbot/database/mongo/: mongodb.py
engbot/database/mongo/repositories/: users.py  words.py
engbot/handlers/: setup_handlers.py  utils.py
engbot/handlers/chats/: handlers.py
engbot/handlers/commands/: assemble.py  commands.py  utils.py
engbot/handlers/message/create_new_word/: handlers.py
engbot/handlers/message/work_with_words/: handlers.py
engbot/models/: users.py  words.py
engbot/services/: limiters.py
engbot/services/cache/: states.py  storage.py
engbot/services/controllers/: chat_controllers.py
engbot/services/decorators/: controller.py  utils.py
engbot/services/translate/: api.py
engbot/tasks/: constants.py  manage.py  scheduler.py  tasks.py
engbot/utils/: callback_datas.py  helpers.py  keyboards.py  set_command.py
tests/: conftest.py
tests/cache/: test_connection_to_cache.py  test_current_page.py
tests/database/: test_connection.py  test_connection_to_db.py
tests/database/crud/: test_user.py  test_words.py
tests/limiter/: test_limiter.py
